refactor: remove ConfiguracaoController and associated commands, queries, and services